--- a/FetchAPI/templates/FetchAPI/index.html
+++ b/FetchAPI/templates/FetchAPI/index.html
@@ -11,10 +11,18 @@
         <h1>{{ title }}</h1>
         <button id="button" onClick="img();" class="btn btn-primary mb-3">画像生成開始</button>
         <div id="container">
-            <div id="img1"></div><div id="img2"></div><div id="img3"></div>
+            <div class="row row-cols-3">
+                <div class="col" id="img1"></div>
+                <div class="col" id="img2"></div>
+                <div class="col" id="img3"></div>
+            </div>
         </div>
     <script>
-        function img() {showImage("{% url 'img' %}");}
+        function img() {
+            showImage("{% url 'img' %}", 1);
+            showImage("{% url 'img' %}", 2);
+            showImage("{% url 'img' %}", 3);
+        }
     </script>
     </body>
 </html>
