--- a/FetchAPI/templates/FetchAPI/index.html
+++ b/FetchAPI/templates/FetchAPI/index.html
@@ -19,9 +19,9 @@
         </div>
     <script>
         function img() {
-            showImage("{% url 'img' %}", 1);
-            showImage("{% url 'img' %}", 2);
-            showImage("{% url 'img' %}", 3);
+            showImage("{% url 'img' 1 %}", 1);
+            showImage("{% url 'img' 2 %}", 2);
+            showImage("{% url 'img' 3 %}", 3);
         }
     </script>
     </body>
