--- a/FetchAPI/templates/FetchAPI/index.html
+++ b/FetchAPI/templates/FetchAPI/index.html
@@ -19,6 +19,7 @@
         </div>
     <script>
         function img() {
+            switchButton(true)
             showImage("{% url 'img' 0 %}", 0);
             {% comment %} showImage("{% url 'img' 1 %}", 1); {% endcomment %}
             {% comment %} showImage("{% url 'img' 2 %}", 2); {% endcomment %}
