--- a/FetchAPI/templates/FetchAPI/index.html
+++ b/FetchAPI/templates/FetchAPI/index.html
@@ -21,8 +21,8 @@
         function img() {
             switchButton(true)
             showImage("{% url 'img' 0 %}", 0);
-            {% comment %} showImage("{% url 'img' 1 %}", 1); {% endcomment %}
-            {% comment %} showImage("{% url 'img' 2 %}", 2); {% endcomment %}
+            showImage("{% url 'img' 1 %}", 1);
+            showImage("{% url 'img' 2 %}", 2);
         }
     </script>
     </body>
