--- a/FetchAPI/templates/FetchAPI/index.html
+++ b/FetchAPI/templates/FetchAPI/index.html
@@ -20,9 +20,7 @@
     <script>
         function img() {
             switchButton(true)
-            showImage("{% url 'img' 0 %}", 0);
-            showImage("{% url 'img' 1 %}", 1);
-            showImage("{% url 'img' 2 %}", 2);
+            showImage("{% url 'img' %}", 3);
         }
     </script>
     </body>
