--- a/FetchAPI/templates/FetchAPI/index.html
+++ b/FetchAPI/templates/FetchAPI/index.html
@@ -20,7 +20,7 @@
     <script>
         function img() {
             switchButton(true)
-            showImage("{% url 'img' 0 %}", 3);
+            showImage("{% url 'img' %}", 1);
         }
     </script>
     </body>
