--- a/FetchAPI/templates/FetchAPI/index.html
+++ b/FetchAPI/templates/FetchAPI/index.html
@@ -12,8 +12,21 @@
         <form action="{% url 'index' %}" method="POST">
             {% csrf_token %}
             <div class="row">
-                <div class="col-10">
+                <div class="col-9">
                     <input type="text" class="form-control" value="{{ sentence }}" placeholder="日本語の文" id="sentence" name="sentence">
+                </div>
+                <div class="col-1">
+                    <select class="form-select" id="num" name="num" value="{{ num }}">
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                        <option value="6">6</option>
+                        <option value="7">7</option>
+                        <option value="8">8</option>
+                        <option value="9">9</option>
+                    </select>
                 </div>
                 <div class="col-2">
                     <button type="submit" id="button" class="btn btn-primary mb-3">画像生成開始</button>
