--- a/FetchAPI/templates/FetchAPI/index.html
+++ b/FetchAPI/templates/FetchAPI/index.html
@@ -19,8 +19,12 @@
                     <select class="form-select" id="num" name="num">
                         {% with ''|center:9 as range %}
                         {% for _ in range %}
-                        {% if num and num == forloop.counter %}
-                            <option value="{{ forloop.counter }}" selected>{{ forloop.counter }}</option>
+                        {% if num %}
+                            {% if num == forloop.counter %}
+                                <option value="{{ forloop.counter }}" selected>{{ forloop.counter }}</option>
+                            {% else %}
+                                <option value="{{ forloop.counter }}">{{ forloop.counter }}</option>
+                            {% endif %}
                         {% else %}
                             <option value="{{ forloop.counter }}">{{ forloop.counter }}</option>
                         {% endif %}
