--- a/FetchAPI/templates/FetchAPI/index.html
+++ b/FetchAPI/templates/FetchAPI/index.html
@@ -38,7 +38,7 @@
             </div>
         </form>
         <div id="container">
-            <div class="row">
+            <div class="row my-5">
                 {% if num %}
                 {% with ''|center:num as range %}
                 {% for _ in range %}
