--- a/FetchAPI/templates/FetchAPI/index.html
+++ b/FetchAPI/templates/FetchAPI/index.html
@@ -37,14 +37,14 @@
                 </div>
             </div>
         </form>
-        {% if num %}
+        {% if num and sentence %}
         <div id="container">
             {% with ''|center:num as range %}
             {% for _ in range %}
             {% if forloop.counter0|divisibleby:"4" or forloop.first %}
                 <div class="row my-5">
             {% endif %}
-            <div class="col d-flex align-items-center justify-content-center" id="img{{ forloop.counter0 }}"></div>
+                    <div class="col d-flex align-items-center justify-content-center" id="img{{ forloop.counter0 }}"></div>
             {% if forloop.counter|divisibleby:"4" or forloop.last %}
                 </div>
             {% endif %}
