--- a/FetchAPI/templates/FetchAPI/index.html
+++ b/FetchAPI/templates/FetchAPI/index.html
@@ -3,12 +3,17 @@
 <html lang="ja">
     <head>
         <meta http-equiv="Content-type" content="text/html; charset=utf-8" /> 
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{{ title }}</title>
         <script type="text/javascript" src="{% static 'index.js' %}"></script>
+        <link rel="stylesheet" href="{% static 'style.css' %}">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     </head>
     <body>
+	    <header id="Top">
+        <div id="headerline">
         <h1>{{ title }}</h1>
+        <div class="container boxlink">
         <form action="{% url 'index' %}" method="POST">
             {% csrf_token %}
             <div class="row">
@@ -55,5 +60,8 @@
             showImage("{% url 'img' %}", {{ num }}, "{{ sentence }}");
         </script>
         {% endif %}
-</body>
+    </div>
+    </div>
+    </header>
+    </body>
 </html>
