--- a/FetchAPI/static/style.css
+++ b/FetchAPI/static/style.css
@@ -36,14 +36,14 @@ a {
 header {
     position: relative;
     padding: 0;
-    /* min-height: 70vh; */
+    min-height: 70vh;
     /* background: url('image.jpg') center/cover; */
     color: #000;
 }
 
 /* ヘッダー枠線 */
 #headerline {
-    margin: 0 auto;
+    margin: 5% auto;
     width: auto;
     height: auto;
     border: thin solid #000;
