--- a/FetchAPI/templates/FetchAPI/index.html
+++ b/FetchAPI/templates/FetchAPI/index.html
@@ -12,9 +12,9 @@
     <body>
 	    <header id="Top">
         {% if height %}
-            <div id="headerline" style="height:{{ height }}px;">
+        <div id="headerline d-flex align-content-start" style="height:{{ height }}px;">
         {% else %}
-            <div id="headerline">
+        <div id="headerline d-flex align-content-start">
         {% endif %}
         <h1>{{ title }}</h1>
         <div class="container boxlink">
