--- a/FetchAPI/templates/FetchAPI/index.html
+++ b/FetchAPI/templates/FetchAPI/index.html
@@ -16,7 +16,7 @@
         {% else %}
         <div id="headerline d-flex align-content-start">
         {% endif %}
-        <div class="container boxlink">
+        <div class="boxlink flex-column">
         <div class="row"><div class="col"><h1>{{ title }}</h1></div></div>
         <div class="row">
             <form action="{% url 'index' %}" method="POST">
