--- a/FetchAPI/templates/FetchAPI/index.html
+++ b/FetchAPI/templates/FetchAPI/index.html
@@ -16,9 +16,9 @@
         {% else %}
         <div id="headerline d-flex align-content-start">
         {% endif %}
-        <div class="boxlink flex-column">
-        <div class="row"><div class="col"><h1>{{ title }}</h1></div></div>
-        <div class="row">
+        <div class="boxlink d-flex flex-column">
+        <div class="row d-flex flex-row"><div class="col"><h1>{{ title }}</h1></div></div>
+        <div class="row d-flex flex-row">
             <form action="{% url 'index' %}" method="POST">
             {% csrf_token %}
                 <div class="col-9">
