--- a/FetchAPI/templates/FetchAPI/index.html
+++ b/FetchAPI/templates/FetchAPI/index.html
@@ -12,11 +12,11 @@
     <body>
 	    <header id="Top">
         {% if height %}
-        <div id="headerline d-flex align-content-start" style="height:{{ height }}px;">
+        <div id="headerline d-flex flex-column align-content-start" style="height:{{ height }}px;">
         {% else %}
-        <div id="headerline d-flex align-content-start">
+        <div id="headerline d-flex flex-column align-content-start">
         {% endif %}
-        <div class="boxlink d-flex flex-column">
+        <div class="boxlink">
         <h1>{{ title }}</h1>
         <div class="d-flex flex-row">
             <form action="{% url 'index' %}" method="POST">
