--- a/FetchAPI/templates/FetchAPI/index.html
+++ b/FetchAPI/templates/FetchAPI/index.html
@@ -12,15 +12,14 @@
     <body>
 	    <header id="Top">
         {% if height %}
-        <div id="headerline d-flex flex-column align-content-start" style="height:{{ height }}px;">
+        <div id="headerline" style="height:{{ height }}px;">
         {% else %}
-        <div id="headerline d-flex flex-column align-content-start">
+        <div id="headerline">
         {% endif %}
-        <div class="boxlink">
-        <h1>{{ title }}</h1>
-        <div class="d-flex flex-row">
-            <form action="{% url 'index' %}" method="POST">
+        <h1 style="position:absolute;top:60px;left:100px;">{{ title }}</h1>
+        <form action="{% url 'index' %}" method="POST">
             {% csrf_token %}
+            <div class="d-flex flex-row" style="position:absolute;top:50px;left:100px;min-width:90%;">
                 <div class="col-9">
                     <input type="text" class="form-control" value="{{ sentence }}" placeholder="日本語の文" id="sentence" name="sentence">
                 </div>
@@ -44,8 +43,8 @@
                 <div class="col-2">
                     <button type="submit" id="button" class="btn btn-primary mb-3">画像生成開始</button>
                 </div>
-            </form>
-        </div>
+            </div>
+        </form>
         {% if num and sentence %}
         <div id="container">
             {% with ''|center:num as range %}
