--- a/FetchAPI/templates/FetchAPI/index.html
+++ b/FetchAPI/templates/FetchAPI/index.html
@@ -20,10 +20,10 @@
         <form action="{% url 'index' %}" method="POST">
             {% csrf_token %}
             <div class="d-flex flex-row" style="position:absolute;top:120px;left:100px;min-width:90%;">
-                <div class="col-9">
+                <div class="col-9" style="padding:0 2px;">
                     <input type="text" class="form-control" value="{{ sentence }}" placeholder="日本語の文" id="sentence" name="sentence">
                 </div>
-                <div class="col-1">
+                <div class="col-1" style="padding:0 2px;">
                     <select class="form-select" id="num" name="num">
                         {% with ''|center:16 as range %}
                         {% for _ in range %}
@@ -40,7 +40,7 @@
                         {% endwith %}
                     </select>
                 </div>
-                <div class="col-2">
+                <div class="col-2" style="padding:0 2px;">
                     <button type="submit" id="button" class="btn btn-primary mb-3">画像生成開始</button>
                 </div>
             </div>
