--- a/FetchAPI/templates/FetchAPI/index.html
+++ b/FetchAPI/templates/FetchAPI/index.html
@@ -52,7 +52,7 @@
             {% if forloop.first %}
             <div class="row">
             {% endif %}
-                <div class="col d-flex align-items-center justify-content-center" style="margin:10px 0" id="img{{ forloop.counter0 }}"></div>
+                <div class="col" style="margin:10px" id="img{{ forloop.counter0 }}"></div>
             {% if forloop.last %}
             </div>
             {% endif %}
